# template-engine

./: .clang-format  CMakeLists.txt  README.md
docs/: TODO.md
include/yate/: yate.hh
src/: CMakeLists.txt
src/example/: CMakeLists.txt  example_main.cc
src/yate/: CMakeLists.txt  environment.cc  environment.hh  frame.cc  frame.hh  lexer.cc  lexer.hh  renderer.cc  renderer.hh  token.cc  token.hh  utils.hh  yate.cc
tests/: CMakeLists.txt  lexer_tests.cc  lexer_tests.hh  render_tests.cc  render_tests.hh  test_main.cc  unit.hh
